--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "city",
   "version": "1.0.0",
+  "productName": "HabboCity",
   "main": "app.js",
   "description": "City: Créez votre avatar, décorez votre appartement ! Tchattez avec vos amis.",
   "homepage": "https://habbocity.me",
@@ -23,7 +24,7 @@
     "electron-updater": "4.3.5"
   },
   "build": {
-    "appId": "me.city.app",
+    "appId": "me.habbocity.CityApp",
     "files": "!build/SignHook.js",
     "extraResources": [
       "./flash/**"
@@ -60,6 +61,7 @@
     },
     "afterSign": "build/SignHook.js",
     "mac": {
+      "icon": "icon.png",
       "category": "public.games.social-networking",
       "darkModeSupport": true,
       "hardenedRuntime": true,
