--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "electron-notarize": "^1.0.0"
   },
   "dependencies": {
-    "electron-updater": "4.3.5"
+    "electron-updater": "4.3.5",
+    "node-machine-id": "^1.1.12"
   },
   "build": {
     "appId": "me.habbocity.CityApp",
