--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "city",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "productName": "HabboCity",
   "main": "app.js",
   "description": "HabboCity: Créez votre avatar, décorez votre appartement ! Tchattez avec vos amis.",
@@ -19,7 +19,7 @@
     "dotenv": "^8.2.0",
     "electron": "11.1.0",
     "electron-builder": "22.9.1",
-    "electron-notarize": "^1.0.0"
+    "@electron/notarize": "^1.2.3"
   },
   "dependencies": {
     "discord-rpc": "^3.1.4",
